@@ -1,4 +1,4 @@
-.TH VNSTATD 8 "JANUARY 2020" "version 2.6" "User Manuals"
+.TH VNSTATD 8 "JANUARY 2021" "version 2.7" "User Manuals"
 .SH NAME
 vnstatd \- daemon based database updating for vnStat
 
@@ -16,6 +16,7 @@ vnstatd \- daemon based database updating for vnStat
 .RB [ \-\-group
 .IR group ]
 .RB [ \-\-help ]
+.RB [ \-\-initdb ]
 .RB [ \-\-noadd ]
 .RB [ \-\-nodaemon ]
 .RB [ \-\-pidfile
@@ -96,6 +97,15 @@ can be either the name of the group or a numerical group id. This option
 can only be used when the process is started as root.
 
 .TP
+.B "--initdb"
+Create a new empty database and exit. If the database already exists then
+access to it is verified. The daemon doesn't stay running when this option is
+used. This option cannot be used in combination with
+.B "-d, --daemon"
+or
+.BR "-n, --nodaemon" .
+
+.TP
 .B "--noadd"
 Disable the automatic creation of new database entries for all available
 interfaces if the daemon is started with no database found or with a database
@@ -116,10 +126,8 @@ Write the process id to
 and use it for locking so that another instance of the daemon cannot
 be started if the same
 .I file
-is specified. This option has no effect if combined with
-.B -n
-or
-.BR --nodaemon .
+is specified. This option has no effect if used in combination with
+.BR "-n, --nodaemon" .
 
 .TP
 .B "-s, --sync"
